// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo snapshots renders collapsed view 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  opacity: 0;
  -webkit-transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  pointer-events: none;
}

.c1 {
  padding-left: 20px;
  width: 92px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
}

.c1 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 img:first-child {
  margin-right: 8px;
}

.c1 img {
  width: auto;
  height: 32px;
}

<div
  className="c0 c1"
>
  <a
    href=""
    onClick={[Function]}
  >
    <img
      src=""
    />
  </a>
  <div
    className="c2 c3"
  >
    <a
      href=""
      onClick={[Function]}
    >
      <img
        src=""
      />
    </a>
  </div>
</div>
`;

exports[`Logo snapshots renders open view 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  opacity: 1;
  -webkit-transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c1 {
  padding-left: 20px;
  width: 228px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
}

.c1 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 img:first-child {
  margin-right: 8px;
}

.c1 img {
  width: auto;
  height: 32px;
}

<div
  className="c0 c1"
>
  <a
    href=""
    onClick={[Function]}
  >
    <img
      src=""
    />
  </a>
  <div
    className="c2 c3"
  >
    <a
      href=""
      onClick={[Function]}
    >
      <img
        src=""
      />
    </a>
  </div>
</div>
`;
